# kiwi-grammar

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build.sh  build_wasm.sh  detect-export.py  todo.md
include/: rules.h  ruleset.h
src/: main-wasm.cpp  main.cpp  rules.cpp  ruleset.cpp
